# Finera

./: CMakeLists.txt  Main.qml  README.md  applicationFont.qrc  applicationIcon.qrc  applicationengine.cpp  applicationengine.h  font.qrc  fonts.qrc  icon.aps  listmodel.cpp  listmodel.h  main.cpp  sqlmodel.cpp  sqlmodel.h  sqlmodelexpenses.cpp  sqlmodelexpenses.h  sqlmodelincome.cpp  sqlmodelincome.h  sqlmodeltarget.cpp  sqlmodeltarget.h
pages/: TargetElement.qml  addOrDelPage.qml  devPage.qml  statisticExpensesPage.qml  statisticIncomePage.qml  statisticPage.qml  targetPage.qml
